syntax = "proto3";

package silvana.orderbook.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/SilvanaOne/canton-agent/proto;orderbook";

// ============================================================================
// Enumerations
// ============================================================================

// Order type enumeration
enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_BID = 1;  // Buy order
  ORDER_TYPE_OFFER = 2; // Sell order
}

// Order status enumeration
enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_ACTIVE = 1;
  ORDER_STATUS_PARTIAL = 2;
  ORDER_STATUS_FILLED = 3;
  ORDER_STATUS_CANCELLED = 4;
  ORDER_STATUS_EXPIRED = 5;
}

// Time in force enumeration
enum TimeInForce {
  TIME_IN_FORCE_UNSPECIFIED = 0;
  TIME_IN_FORCE_GTC = 1; // Good Till Cancel
  TIME_IN_FORCE_IOC = 2; // Immediate Or Cancel
  TIME_IN_FORCE_FOK = 3; // Fill Or Kill
  TIME_IN_FORCE_GTD = 4; // Good Till Date
}

// Settlement status enumeration
enum SettlementStatus {
  SETTLEMENT_STATUS_UNSPECIFIED = 0;
  SETTLEMENT_STATUS_CREATED = 1;
  SETTLEMENT_STATUS_PRECONFIRMED = 2;
  SETTLEMENT_STATUS_DVP_REQUEST_CREATED = 3;
  SETTLEMENT_STATUS_DVP_REQUEST_ACCEPTED = 4;
  SETTLEMENT_STATUS_INSTRUMENTS_ALLOCATED = 5;
  SETTLEMENT_STATUS_SETTLED = 6;
  SETTLEMENT_STATUS_CANCELLED = 7;
  SETTLEMENT_STATUS_FAILED = 8;
}

// Market type enumeration
enum MarketType {
  MARKET_TYPE_UNSPECIFIED = 0;
  MARKET_TYPE_GENERAL = 1;
  MARKET_TYPE_INSTITUTIONAL = 2;
  MARKET_TYPE_OTC = 3;
}

// ============================================================================
// Core Data Messages (matching SQL tables)
// ============================================================================

// JWT authentication token (for server-signed tokens using JWT_PRIVATE_KEY)
message JWTAuth {
  string token = 1; // JWT signed with server's Ed25519 private key (JWT_PRIVATE_KEY)
}

// External account authentication
// JWT is signed by the external account's Ed25519 private key
// The public_key is verified against the party_id fingerprint:
//   fingerprint = SHA256(0x0000000C || public_key_bytes)
//   party_id format: "identifier::1220{fingerprint}"
message ExternalAuth {
  string jwt = 1;              // JWT signed with external account's Ed25519 private key
  string party_id = 2;         // Canton party ID of the external account
  string public_key = 3;       // Ed25519 public key (hex) - verified against party_id fingerprint
}

// Instrument message
message Instrument {
  string instrument_id = 1;
  string instrument_type = 2;
  string name = 3;
  string symbol = 4;
  optional string description = 5;
  optional string issuer = 6;
  optional string registry = 7;
  optional google.protobuf.Struct metadata = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  string news_symbol = 11;  // Symbol for news API search (e.g., 'BTC' for WBTC)
}

// Market message
message Market {
  string market_id = 1;
  MarketType market_type = 2;
  string base_instrument = 3;
  string quote_instrument = 4;
  string pair_symbol = 5; // Generated: base/quote
  bool is_active = 6;
  string min_order_size = 7; // DECIMAL(38,10) as string
  optional string max_order_size = 8; // DECIMAL(38,10) as string
  string tick_size = 9; // DECIMAL(38,10) as string
  string maker_fee = 10; // DECIMAL(10,6) as string
  string taker_fee = 11; // DECIMAL(10,6) as string
  optional google.protobuf.Struct metadata = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
  optional google.protobuf.Struct price_feeds = 15; // Price feed configurations

  // Optional price information (populated if available)
  optional double current_price = 16;
  optional double change_24h = 17;
  optional double volume_24h = 18;
  optional google.protobuf.Timestamp price_updated_at = 19;
}

// Order message
message Order {
  uint64 order_id = 1; // BIGINT UNSIGNED AUTO_INCREMENT
  string market_id = 2;
  OrderType order_type = 3;
  string trader = 4; // Canton party ID
  optional string trader_order_ref = 5;
  string base_instrument = 6;
  string quote_instrument = 7;
  string price = 8; // DECIMAL(38,10) as string
  string quantity = 9; // DECIMAL(38,10) as string
  string filled_quantity = 10; // DECIMAL(38,10) as string
  string pending_quantity = 11; // DECIMAL(38,10) as string
  string remaining_quantity = 12; // DECIMAL(38,10) as string (calculated)
  OrderStatus status = 13;
  TimeInForce time_in_force = 14;
  optional google.protobuf.Timestamp expires_at = 15;
  uint64 version = 16; // Optimistic locking
  optional google.protobuf.Struct credentials = 17;
  optional google.protobuf.Struct requirements = 18;
  optional google.protobuf.Struct metadata = 19;
  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
  optional google.protobuf.Timestamp cancelled_at = 22;
}

// Orderbook depth level (aggregated view without user details)
message OrderbookLevel {
  string price = 1; // DECIMAL(38,10) as string
  string total_quantity = 2; // DECIMAL(38,10) as string
  uint32 order_count = 3;
  google.protobuf.Timestamp first_order_time = 4;
}

// Orderbook depth for a market
message OrderbookDepth {
  string market_id = 1;
  string pair_symbol = 2;
  repeated OrderbookLevel bids = 3; // Sorted by price DESC
  repeated OrderbookLevel offers = 4; // Sorted by price ASC
  google.protobuf.Timestamp snapshot_time = 5;
}

// Settlement proposal message
message SettlementProposal {
  string proposal_id = 1; // UUID v7 - single ID used everywhere
  string market_id = 2;
  string buyer = 3;
  string seller = 4;
  string base_quantity = 5; // DECIMAL(38,10) as string
  string quote_quantity = 6; // DECIMAL(38,10) as string
  string settlement_price = 7; // DECIMAL(38,10) as string
  SettlementStatus status = 8;
  uint64 version = 9; // Optimistic locking

  // Preconfirmation tracking
  optional google.protobuf.Struct preconfirmation_request = 10;
  optional google.protobuf.Timestamp preconfirmation_request_sent_at = 11;
  optional google.protobuf.Struct buyer_preconfirmation = 12;
  optional google.protobuf.Timestamp buyer_preconfirmation_received_at = 13;
  optional google.protobuf.Struct seller_preconfirmation = 14;
  optional google.protobuf.Timestamp seller_preconfirmation_received_at = 15;

  // Canton DVP integration fields
  optional string dvp_proposal_cid = 16;
  optional string dvp_proposal_update_id = 17;
  optional string dvp_cid = 18;
  optional string dvp_update_id = 19;
  // Field 20 removed (was dvp_settlement_id - now using proposal_id as settlement ID)
  optional string allocation_buyer_cid = 21;
  optional string allocation_buyer_update_id = 22;
  optional string allocation_seller_cid = 23;
  optional string allocation_seller_update_id = 24;
  optional string settled_dvp_cid = 25;
  optional string settlement_update_id = 26;
  optional string settlement_completion_offset = 27;

  // Timestamps
  google.protobuf.Timestamp created_at = 28;
  optional google.protobuf.Timestamp preconfirmed_at = 29;
  optional google.protobuf.Timestamp dvp_created_at = 30;
  optional google.protobuf.Timestamp dvp_accepted_at = 31;
  optional google.protobuf.Timestamp allocated_at = 32;
  optional google.protobuf.Timestamp settled_at = 33;
  optional google.protobuf.Timestamp cancelled_at = 34;
  optional google.protobuf.Timestamp failed_at = 35;

  optional string error_message = 36;
  optional google.protobuf.Struct metadata = 37;

  // Fee tracking
  string buyer_fee = 38;                    // DECIMAL(38,10) as string
  string seller_fee = 39;                   // DECIMAL(38,10) as string
  optional bool buyer_fee_sent = 40;
  optional bool seller_fee_sent = 41;
  optional bool buyer_fee_received = 42;
  optional bool seller_fee_received = 43;
}

// Order match message
message OrderMatch {
  string settlement_proposal_id = 1; // UUID v7 - primary key (same as proposal_id)
  uint64 bid_order_id = 2;
  uint64 offer_order_id = 3;
  string matched_quantity = 4; // DECIMAL(38,10) as string
  string matched_price = 5; // DECIMAL(38,10) as string
  google.protobuf.Timestamp created_at = 6;
}

// Settlement (completed) message
message Settlement {
  uint64 settlement_id = 1; // BIGINT UNSIGNED AUTO_INCREMENT (internal DB key)
  string proposal_id = 2; // UUID v7 - reference to settlement proposal
  string market_id = 3;
  string buyer = 4;
  string seller = 5;
  string base_quantity = 6; // DECIMAL(38,10) as string
  string quote_quantity = 7; // DECIMAL(38,10) as string
  string settlement_price = 8; // DECIMAL(38,10) as string
  string settled_dvp_cid = 9;
  string settlement_update_id = 10;
  google.protobuf.Timestamp settled_at = 11;
  google.protobuf.Timestamp created_at = 12;
  optional google.protobuf.Struct metadata = 13;
}

// Market data message
message MarketData {
  string market_id = 1;
  string pair_symbol = 2;
  optional string best_bid = 3; // DECIMAL(38,10) as string
  optional string best_offer = 4; // DECIMAL(38,10) as string
  optional string last_price = 5; // DECIMAL(38,10) as string
  string volume_24h = 6; // DECIMAL(38,10) as string
  uint32 trades_24h = 7;
  uint32 open_orders = 8;
  google.protobuf.Timestamp updated_at = 9;
}

// ============================================================================
// Service Request/Response Messages
// ============================================================================

// Get user's orders
message GetOrdersRequest {
  JWTAuth auth = 1;
  optional string market_id = 2;
  optional OrderStatus status = 3;
  optional OrderType order_type = 4;
  optional uint32 limit = 5;
  optional uint32 offset = 6;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
  // Liquidity provider filtering (returns orders from LP parties)
  optional uint32 liquidity_provider_active_seconds = 11;  // Only LPs active within N seconds (default 60)
  repeated string liquidity_provider_names = 12;           // Filter by specific LP names
}

message GetOrdersResponse {
  bool success = 1;
  string message = 2;
  repeated Order orders = 3;
  uint32 total = 4;
}

// Get orderbook depth (aggregated, no user details)
message GetOrderbookDepthRequest {
  JWTAuth auth = 1;
  string market_id = 2;
  optional uint32 depth = 3; // Number of price levels (default 20)
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetOrderbookDepthResponse {
  bool success = 1;
  string message = 2;
  OrderbookDepth orderbook = 3;
}

// Get user's settlement proposals
message GetSettlementProposalsRequest {
  JWTAuth auth = 1;
  optional string market_id = 2;
  optional SettlementStatus status = 3;
  optional uint32 limit = 4;
  optional uint32 offset = 5;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetSettlementProposalsResponse {
  bool success = 1;
  string message = 2;
  repeated SettlementProposal proposals = 3;
  uint32 total = 4;
}

// Get a single settlement proposal by ID
message GetSettlementProposalRequest {
  JWTAuth auth = 1;
  string proposal_id = 2;  // UUID v7
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetSettlementProposalResponse {
  bool success = 1;
  string message = 2;
  optional SettlementProposal proposal = 3;
}

// Get available instruments (filtered by JWT permissions)
message GetInstrumentsRequest {
  JWTAuth auth = 1;
  optional string instrument_type = 2;
  optional uint32 limit = 3;
  optional uint32 offset = 4;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetInstrumentsResponse {
  bool success = 1;
  string message = 2;
  repeated Instrument instruments = 3;
  uint32 total = 4;
}

// Get available markets (filtered by JWT permissions)
message GetMarketsRequest {
  JWTAuth auth = 1;
  optional MarketType market_type = 2;
  optional string base_instrument = 3;
  optional string quote_instrument = 4;
  optional bool active_only = 5;
  optional uint32 limit = 6;
  optional uint32 offset = 7;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetMarketsResponse {
  bool success = 1;
  string message = 2;
  repeated Market markets = 3;
  uint32 total = 4;
}

// Get user's order history
message GetOrderHistoryRequest {
  JWTAuth auth = 1;
  optional string market_id = 2;
  optional google.protobuf.Timestamp from_time = 3;
  optional google.protobuf.Timestamp to_time = 4;
  optional uint32 limit = 5;
  optional uint32 offset = 6;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetOrderHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated Order orders = 3;
  uint32 total = 4;
}

// Get market data (filtered by JWT permissions)
message GetMarketDataRequest {
  JWTAuth auth = 1;
  repeated string market_ids = 2; // Empty = all accessible markets
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetMarketDataResponse {
  bool success = 1;
  string message = 2;
  repeated MarketData market_data = 3;
}

// Get user's settlements (completed)
message GetSettlementsRequest {
  JWTAuth auth = 1;
  optional string market_id = 2;
  optional google.protobuf.Timestamp from_time = 3;
  optional google.protobuf.Timestamp to_time = 4;
  optional uint32 limit = 5;
  optional uint32 offset = 6;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetSettlementsResponse {
  bool success = 1;
  string message = 2;
  repeated Settlement settlements = 3;
  uint32 total = 4;
}

// Subscribe to orderbook updates (streaming)
message SubscribeOrderbookRequest {
  JWTAuth auth = 1;
  string market_id = 2;
  optional uint32 depth = 3; // Number of price levels
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

// Orderbook update event
message OrderbookUpdate {
  string market_id = 1;
  enum UpdateType {
    UPDATE_TYPE_UNSPECIFIED = 0;
    UPDATE_TYPE_SNAPSHOT = 1;
    UPDATE_TYPE_DELTA = 2;
  }
  UpdateType update_type = 2;
  repeated OrderbookLevel bid_updates = 3;
  repeated OrderbookLevel offer_updates = 4;
  google.protobuf.Timestamp timestamp = 5;
  uint64 sequence_number = 6; // For ordering updates
}

// Subscribe to user's order updates (streaming)
message SubscribeOrdersRequest {
  JWTAuth auth = 1;
  optional string market_id = 2;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

// Order update event
message OrderUpdate {
  enum EventType {
    EVENT_TYPE_UNSPECIFIED = 0;
    EVENT_TYPE_CREATED = 1;
    EVENT_TYPE_UPDATED = 2;
    EVENT_TYPE_FILLED = 3;
    EVENT_TYPE_PARTIALLY_FILLED = 4;
    EVENT_TYPE_CANCELLED = 5;
    EVENT_TYPE_EXPIRED = 6;
  }
  EventType event_type = 1;
  Order order = 2;
  optional OrderMatch match = 3; // For fill events
  google.protobuf.Timestamp timestamp = 4;
}

// Subscribe to user's settlement updates (streaming)
message SubscribeSettlementsRequest {
  JWTAuth auth = 1;
  optional string market_id = 2;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

// Settlement update event
message SettlementUpdate {
  enum EventType {
    EVENT_TYPE_UNSPECIFIED = 0;
    EVENT_TYPE_PROPOSAL_CREATED = 1;
    EVENT_TYPE_PRECONFIRMATION_REQUESTED = 2;
    EVENT_TYPE_PRECONFIRMED = 3;
    EVENT_TYPE_DVP_CREATED = 4;
    EVENT_TYPE_DVP_ACCEPTED = 5;
    EVENT_TYPE_ALLOCATED = 6;
    EVENT_TYPE_SETTLED = 7;
    EVENT_TYPE_FAILED = 8;
    EVENT_TYPE_CANCELLED = 9;
    EVENT_TYPE_UPDATED = 10;  // Generic update (e.g., frontend-initiated changes)
  }
  EventType event_type = 1;
  SettlementProposal proposal = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Submit a new order
message SubmitOrderRequest {
  JWTAuth auth = 1;
  string market_id = 2;
  OrderType order_type = 3;
  string price = 4;  // DECIMAL(38,10) as string
  string quantity = 5;  // DECIMAL(38,10) as string
  TimeInForce time_in_force = 6;
  optional google.protobuf.Timestamp expires_at = 7;
  optional string trader_order_ref = 8;
  optional google.protobuf.Struct credentials = 9;
  optional google.protobuf.Struct requirements = 10;
  optional google.protobuf.Struct metadata = 11;
  optional ExternalAuth external_auth = 15;  // Alternative auth for external accounts
}

message SubmitOrderResponse {
  bool success = 1;
  string message = 2;
  optional Order order = 3;
}

// Cancel an existing order
message CancelOrderRequest {
  JWTAuth auth = 1;
  uint64 order_id = 2;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message CancelOrderResponse {
  bool success = 1;
  string message = 2;
  optional Order order = 3;
}

// ============================================================================
// Admin Operations (require operator authentication)
// ============================================================================

// Create a new party (operator, registry, or trader)
message CreatePartyRequest {
  JWTAuth auth = 1;
  string party_id = 2;
  string party_name = 3;
  string party_type = 4; // trader, operator, registry, issuer
  optional string user_service_cid = 5; // UserService contract ID for traders
  optional string operator_config_cid = 6; // OperatorConfiguration contract ID for operators
  optional google.protobuf.Struct metadata = 7;
  optional string user_service_request_cid = 8; // UserService request contract ID
  google.protobuf.Struct user_data = 9; // User-specific data (KYC, credentials, etc.)
  optional ExternalAuth external_auth = 15;  // Alternative auth for external accounts
  // Liquidity provider fields (creates/links LP entry when party is created)
  optional string liquidity_provider_name = 16;        // LP name to create/link
  optional string liquidity_provider_description = 17; // LP description (for new LPs)
}

message CreatePartyResponse {
  bool success = 1;
  string message = 2;
  Party party = 3;
}

// Update an existing party (admin operation)
message UpdatePartyRequest {
  JWTAuth auth = 1;
  string party_id = 2;                            // Required - which party to update
  uint64 expected_version = 3;                    // Required - optimistic locking
  optional string party_name = 4;
  optional string user_service_cid = 5;
  optional string operator_config_cid = 6;
  optional string user_service_request_cid = 7;
  optional google.protobuf.Struct user_data = 8;
  optional google.protobuf.Struct metadata = 9;
  optional string change_reason = 10;             // Audit: why this change
  optional ExternalAuth external_auth = 15;  // Alternative auth for external accounts
}

message UpdatePartyResponse {
  bool success = 1;
  string message = 2;
  Party party = 3;
}

// Deactivate a party (soft delete - admin operation)
message DeactivatePartyRequest {
  JWTAuth auth = 1;
  string party_id = 2;
  uint64 expected_version = 3;
  string change_reason = 4;                       // Required for deactivation
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message DeactivatePartyResponse {
  bool success = 1;
  string message = 2;
  Party party = 3;
}

// Get party change history (audit trail)
message GetPartyHistoryRequest {
  JWTAuth auth = 1;
  string party_id = 2;
  optional uint32 limit = 3;
  optional uint32 offset = 4;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

// Single entry in party history
message PartyHistoryEntry {
  uint64 history_id = 1;
  string party_id = 2;
  string action = 3;                              // created, updated, deactivated, reactivated
  string changed_by = 4;
  optional string change_reason = 5;
  uint64 version = 6;
  Party party_snapshot = 7;                       // Full party state at this version
  google.protobuf.Timestamp created_at = 8;
}

message GetPartyHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated PartyHistoryEntry history = 3;
  uint32 total = 4;
}

// Get a single party by ID
message GetPartyRequest {
  JWTAuth auth = 1;
  string party_id = 2;
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetPartyResponse {
  bool success = 1;
  string message = 2;
  Party party = 3;
}

// List parties with filters and pagination
message GetPartiesRequest {
  JWTAuth auth = 1;
  optional string party_type = 2;           // Filter by type: trader, operator, registry, issuer
  optional bool active_only = 3;            // If true, only return active parties (default: all)
  optional uint32 limit = 4;                // Max results (default: 50, max: 1000)
  optional uint32 offset = 5;               // Pagination offset
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message GetPartiesResponse {
  bool success = 1;
  string message = 2;
  repeated Party parties = 3;
  uint32 total = 4;
}

// Party information
message Party {
  string party_id = 1;
  string party_name = 2;
  string party_type = 3;
  optional string user_service_cid = 4;
  optional string operator_config_cid = 5;
  bool is_active = 6;
  optional google.protobuf.Struct metadata = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  optional string user_service_request_cid = 10;  // UserService request contract ID
  google.protobuf.Struct user_data = 11;           // User-specific data (KYC, credentials, etc.)
  uint64 version = 12;                             // Optimistic locking version
}

// Liquidity provider information
message LiquidityProvider {
  string name = 1;                                  // Primary key name
  string party_id = 2;                              // Canton party ID
  optional string description = 3;                  // Description
  optional google.protobuf.Timestamp last_active_time = 4;  // Last ping time
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// Get liquidity providers list
message GetLiquidityProvidersRequest {
  JWTAuth auth = 1;
  optional uint32 active_seconds = 2;  // Only return LPs active within N seconds (default: all)
  optional uint32 limit = 3;           // Pagination
  optional uint32 offset = 4;
  optional ExternalAuth external_auth = 10;
}

message GetLiquidityProvidersResponse {
  bool success = 1;
  string message = 2;
  repeated LiquidityProvider liquidity_providers = 3;
  uint32 total = 4;
}

// Create a new instrument
message CreateInstrumentRequest {
  JWTAuth auth = 1;
  string instrument_id = 2;
  string instrument_type = 3; // token, asset, commodity, native
  string name = 4;
  string symbol = 5;
  optional string description = 6;
  optional string issuer = 7; // Canton party ID
  optional string registry = 8; // Canton registry party ID
  optional google.protobuf.Struct metadata = 9;
  string news_symbol = 10;  // Symbol for news API search (e.g., 'BTC' for WBTC)
  optional ExternalAuth external_auth = 15;  // Alternative auth for external accounts
}

message CreateInstrumentResponse {
  bool success = 1;
  string message = 2;
  Instrument instrument = 3;
}

// Create a new market
message CreateMarketRequest {
  JWTAuth auth = 1;
  string market_id = 2;
  MarketType market_type = 3;
  optional string base_instrument = 4; // Optional for general markets
  optional string quote_instrument = 5; // Optional for general markets
  string min_order_size = 6; // DECIMAL as string
  optional string max_order_size = 7; // DECIMAL as string
  string tick_size = 8; // Minimum price increment
  string maker_fee = 9; // DECIMAL as string (e.g., "0.001" for 0.1%)
  string taker_fee = 10; // DECIMAL as string (e.g., "0.002" for 0.2%)
  optional google.protobuf.Struct metadata = 11;
  optional google.protobuf.Struct price_feeds = 12; // Price feed configurations
  optional ExternalAuth external_auth = 15;  // Alternative auth for external accounts
}

message CreateMarketResponse {
  bool success = 1;
  string message = 2;
  Market market = 3;
}

// Update price feeds for an existing market
message UpdateMarketPriceFeedsRequest {
  JWTAuth auth = 1;
  string market_id = 2;
  google.protobuf.Struct price_feeds = 3; // New price feed configuration
  optional ExternalAuth external_auth = 10;  // Alternative auth for external accounts
}

message UpdateMarketPriceFeedsResponse {
  bool success = 1;
  string message = 2;
  Market market = 3; // Updated market info
}

// ============================================================================
// Service Definition
// ============================================================================

service OrderbookService {
  // Query operations
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrderbookDepth(GetOrderbookDepthRequest) returns (GetOrderbookDepthResponse);
  rpc GetSettlementProposals(GetSettlementProposalsRequest) returns (GetSettlementProposalsResponse);
  rpc GetSettlementProposal(GetSettlementProposalRequest) returns (GetSettlementProposalResponse);
  rpc GetInstruments(GetInstrumentsRequest) returns (GetInstrumentsResponse);
  rpc GetMarkets(GetMarketsRequest) returns (GetMarketsResponse);
  rpc GetOrderHistory(GetOrderHistoryRequest) returns (GetOrderHistoryResponse);
  rpc GetMarketData(GetMarketDataRequest) returns (GetMarketDataResponse);
  rpc GetSettlements(GetSettlementsRequest) returns (GetSettlementsResponse);

  // Order management operations
  rpc SubmitOrder(SubmitOrderRequest) returns (SubmitOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);

  // Party operations
  rpc GetParty(GetPartyRequest) returns (GetPartyResponse);
  rpc GetParties(GetPartiesRequest) returns (GetPartiesResponse);

  // Liquidity provider operations
  rpc GetLiquidityProviders(GetLiquidityProvidersRequest) returns (GetLiquidityProvidersResponse);

  // Admin operations (require operator authentication)
  rpc CreateParty(CreatePartyRequest) returns (CreatePartyResponse);
  rpc UpdateParty(UpdatePartyRequest) returns (UpdatePartyResponse);
  rpc DeactivateParty(DeactivatePartyRequest) returns (DeactivatePartyResponse);
  rpc GetPartyHistory(GetPartyHistoryRequest) returns (GetPartyHistoryResponse);
  rpc CreateInstrument(CreateInstrumentRequest) returns (CreateInstrumentResponse);
  rpc CreateMarket(CreateMarketRequest) returns (CreateMarketResponse);
  rpc UpdateMarketPriceFeeds(UpdateMarketPriceFeedsRequest) returns (UpdateMarketPriceFeedsResponse);

  // Streaming subscriptions
  rpc SubscribeOrderbook(SubscribeOrderbookRequest) returns (stream OrderbookUpdate);
  rpc SubscribeOrders(SubscribeOrdersRequest) returns (stream OrderUpdate);
  rpc SubscribeSettlements(SubscribeSettlementsRequest) returns (stream SettlementUpdate);
}